--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,9 @@
 body { color: #5c5c5c; background-color: #111111; font-family: Helvetica, Arial, Sans-Serif; text-align: center; margin: 1em 0 0 0; vertical-align: middle; }
 a:link, a:visited { color: #3D3D3D  ; text-decoration: underline; }
 a:hover, a:focus { text-decoration: none; background: #231F1F; color: #ffffff; }
-.container { text-align:left; width: 760px; margin: 0 auto; }
+.container { text-align: left; width: 760px; margin: 0 auto; }
 img.main { float: right; margin-left: 0.5em; }
 img { border: 0; }
-h1 { color: #ff1170; font-size: 5em; clear: right; text-align: right; }
-p.description { padding-top: 2em; }
+h1 { color: #ff1170; font-size: 4em; clear: right; text-align: right; margin: 0 0 14px 0; }
+h2 { font-size: 1.4em; clear: right; text-align: right; margin: 14px 0; padding-top: 14px; }
+p.description { clear: right; text-align: right; }
