--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,4 +5,6 @@
     %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css' }
   %body
     .container
+      %a{ :href => '/', :title => 'the one where dass and james take one photo every single day' }
+        %h1 one photo every day
       = yield
