--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,12 @@
-body { color: #5c5c5c; background-color: #111111; font-family: Helvetica, Arial, Sans-Serif; text-align: center; margin: 1em 0 0 0; vertical-align: middle; }
-a:link, a:visited { color: #3D3D3D  ; text-decoration: underline; }
+body { color: #5c5c5c; background: #111111; font-family: Helvetica, Arial, Sans-Serif; text-align: center; margin: 1em 0 0 0; vertical-align: middle; }
+a:link, a:visited { color: #3D3D3D  ; text-decoration: none; }
 a:hover, a:focus { text-decoration: none; background: #231F1F; color: #ffffff; }
 .container { text-align: left; width: 760px; margin: 0 auto; }
 img.main { float: right; margin-left: 0.5em; }
 img { border: 0; }
 h1 { color: #ff1170; font-size: 4em; clear: right; text-align: right; margin: 0 0 14px 0; }
+h1 a:hover, h1 a:focus { text-decoration: none; }
+h1 a:link, h1 a:hover, h1 a:focus, h1 a:visited { color: #ff1170; background: #111111; text-decoration: none; }
 h2 { font-size: 1.4em; clear: right; text-align: right; margin: 14px 0; padding-top: 14px; }
-p.description { clear: right; text-align: right; }
-p.phototitle { font-size: 2.4em; }
+p.phototitle { font-size: 2.4em; margin: 0 0 8px 0; }
+p.description { font-size: 1.2em; }
