Target for flickr links is _blank.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,4 +1,4 @@
-%a{ :href => @photo_link, :title => @photo.title }
+%a{ :href => @photo_link, :title => @photo.title, :target => '_blank' }
   %img{ :class => 'main', :src => @photo_url, :alt => @photo.title }
 
 %p{ :class => 'phototitle' }
