--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,10 +1,10 @@
 !!! 5
 %html{html_attrs('en-AU')}
   %head
-    %title a photo a day
+    %title one photo every day
     %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css' }
   %body
     .container
-      %a{ :href => '/', :title => 'the one where dass and james take one photo every single day' }
+      %a{ :href => '/', :title => 'dass and james take one photo every single day' }
         %h1 one photo every day
       = yield
