--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,5 +6,6 @@
   %body
     .container
       %a{ :href => '/', :title => 'dass and james take one photo every single day' }
-        %h1 one photo every day
+        %h1{ :class => 'pink-bottom-border' }
+          one photo every day
       = yield
