--- a/public/style.css
+++ b/public/style.css
@@ -8,5 +8,6 @@ h1 { color: #ff1170; font-size: 4em; clear: right; text-align: right; margin: 0 
 h1 a:hover, h1 a:focus { text-decoration: none; }
 h1 a:link, h1 a:hover, h1 a:focus, h1 a:visited { color: #ff1170; background: #111111; text-decoration: none; }
 h2 { font-size: 1.4em; clear: right; text-align: right; margin: 14px 0; padding-top: 14px; }
+.pink-bottom-border { padding-bottom: 6px; border-bottom: 1px dotted #ff1170; }
 p.phototitle { font-size: 2.4em; margin: 0 0 8px 0; }
 p.description { font-size: 1.2em; }
