A little more style.

--- a/views/index.haml
+++ b/views/index.haml
@@ -17,4 +17,4 @@
 
   - @other_thumbnails.each do |title, image_href, photo_url|
     %a{ :href => photo_url, :title => title }
-      %img{ :src => image_href, :alt => title, :width => '75', :height => '75' }
+      %img{ :src => image_href, :alt => title, :width => '75', :height => '75', :class => 'thumb' }
