--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,10 @@ body { color: #5c5c5c; background: #111111; font-family: Helvetica, Arial, Sans-
 a:link, a:visited { color: #3D3D3D  ; text-decoration: none; }
 a:hover, a:focus { text-decoration: none; background: #231F1F; color: #ffffff; }
 .container { text-align: left; width: 760px; margin: 0 auto; }
-img.main { float: right; margin-left: 0.5em; }
+img.main { float: right; margin-left: 0.5em; border: 2px #ff1170 solid; }
 img { border: 0; }
+a img.thumb { border: 2px #111111 solid; }
+a:hover img.thumb { border: 2px #ff1170 solid; background: #111111; }
 h1 { color: #ff1170; font-size: 4em; clear: right; text-align: right; margin: 0 0 14px 0; text-shadow: #bb004b 2px 2px 2px; }
 h1 a:hover, h1 a:focus { text-decoration: none; }
 h1 a:link, h1 a:hover, h1 a:focus, h1 a:visited { color: #ff1170; background: #111111; text-decoration: none; }
