Add a query string version param to the style ref.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html{html_attrs('en-AU')}
   %head
     %title one photo every day
-    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css' }
+    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css?v=20101112' }
   %body{ :style => "background: url(\"#{@bg}\") repeat scroll 0 0 transparent" }
     .container
       %a{ :href => '/', :title => 'dass and james take one photo every single day' }
