Because people need feeding.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,7 +16,10 @@
         and 
         %a{ :href => "http://www.flickr.com/photos/jdennes", :target => "_blank" }
           james
-        taking one photo each, every day.
+        taking one photo each, every day. There's a 
+        %a{ :href => "/feed" }
+          feed
+        too. :)
 
     <script type="text/javascript">
     var _gaq = _gaq || [];
