--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,10 +16,12 @@
         and 
         %a{ :href => "http://www.flickr.com/photos/jdennes", :target => "_blank" }
           james
-        taking one photo each, every day. There's a 
+        taking one photo each, every day! |
         %a{ :href => "/feed" }
           feed
-        too. :)
+        |
+        %a{ :href => "/?showmissing=true"}
+          missing photos
 
     <script type="text/javascript">
     var _gaq = _gaq || [];
