A few improvements to layout.haml.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html{html_attrs('en-AU')}
   %head
     %title one photo every day
-    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css?v=20101117' }
+    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css?v=20110205' }
   %body{ :style => "background: url(\"#{@bg}\") repeat scroll 0 0 transparent" }
     .container
       %a{ :href => '/', :title => 'dass and james take one photo every single day' }
@@ -16,10 +16,10 @@
         and 
         %a{ :href => "http://www.flickr.com/photos/jdennes", :target => "_blank" }
           james
-        taking one photo each, every day! |
+        taking one photo every day. You can 
         %a{ :href => "/feed" }
           feed
-        |
+        or see
         %a{ :href => "/?showmissing=true"}
           missing photos
 
