Someone gave up taking photos... :P

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,6 @@
 - if not @photo
   %h2
-    It would appear that we haven't started taking one photo every day just yet. Hopefully we will soon though! ^_^
+    It would appear that I haven't started taking one photo every day just yet. Hopefully I will soon though! ^_^
 - else
   %a{ :href => @photo_link, :title => @photo.title, :target => '_blank' }
     %img{ :class => 'main', :src => @photo_url, :alt => @photo.title }
