Atom feed was missing updated element.

--- a/views/feed.haml
+++ b/views/feed.haml
@@ -4,6 +4,7 @@
   %link{:href => "http://photoaday.jdenn.es/"}
   %link{:href => "http://photoaday.jdenn.es/feed/", :rel => "self"}
   %id http://photoaday.jdenn.es.com/
+  %updated= @photos[0][4]
   %author
     %name James Dennes
   - @photos.each do |title, img_src_s, img_src, photo_url, taken|
