Provide slightly larger images in feed items and a few other little tweaks.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,15 +11,12 @@
       = yield
       %div{ :id => 'footer' }
         ="This little thing is constructed by"
-        %a{ :href => "http://www.flickr.com/photos/jdennes", :target => "_blank" }
+        %a{ :href => "http://jdenn.es/", :target => "_blank" }
           ="james"
-        ="taking one photo every day. You can "
+        ="taking one photo every day. There's a"
         %a{ :href => "/feed" }
-          feed
-        ="or see"
-        %a{ :href => "/?showmissing=true"}
-          missing photos
-        ="..."
+          ="feed"
+        ="too, if you're into that."
 
     <script type="text/javascript">
     var _gaq = _gaq || [];
