Adding favicon as well as doing a few other little fixes.

--- a/views/feed.haml
+++ b/views/feed.haml
@@ -1,9 +1,9 @@
 !!! XML
 %feed{:xmlns => "http://www.w3.org/2005/Atom"}
-  %title one photo every day
+  %title="one photo every day"
   %link{:href => "http://photoaday.jdenn.es/"}
   %link{:href => "http://photoaday.jdenn.es/feed/", :rel => "self"}
-  %id http://photoaday.jdenn.es.com/
+  %id="http://photoaday.jdenn.es/"
   %updated= @photos[0][4]
   %author
     %name James Dennes
