--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,8 +1,11 @@
 !!! 5
 %html{html_attrs('en-AU')}
   %head
-    %title one photo every day
-    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css?v=20110205' }
+    %title="one photo every day"
+    %link{:rel => 'shortcut icon', :href => '/favicon.ico'}
+    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css?v=20110405' }
+    -if production?
+      = partial :google_analytics
   %body{ :style => "background: url(\"#{@bg}\") repeat scroll 0 0 transparent" }
     .container
       %a{ :href => '/', :title => 'a thing where james takes one photo every single day' }
@@ -17,14 +20,3 @@
         %a{ :href => "/feed" }
           ="feed"
         ="too, if you're into that."
-
-    <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-10651397-3']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-    </script>
