--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,14 @@
-body { color: #5c5c5c; background: #111111; font-family: Helvetica, Arial, Sans-Serif; text-align: center; margin: 0; vertical-align: middle; }
-a:link, a:visited { color: #3D3D3D  ; text-decoration: none; }
+body { font-size: 14px; color: #5c5c5c; background: #111111; font-family: Helvetica, Arial, Sans-Serif; text-align: center; margin: 0; vertical-align: middle; }
+a:link, a:visited { color: #979797; text-decoration: none; }
 a:hover, a:focus { text-decoration: none; background: #231F1F; color: #ffffff; }
 .container { background: #111111; text-align: left; width: 760px; margin: 0 auto; padding: 0 20px 5px 20px; }
-img.main { float: right; margin-left: 0.5em; border: 2px #ff1170 solid; }
+div#about { font-size: 1em; margin: 12px 0; padding-bottom: 12px; }
+img.main { border: 1px #ff1170 solid; }
 img { border: 0; }
-a img.thumb { border: 2px #111111 solid; }
-a:hover img.thumb { border: 2px #ff1170 solid; background: #111111; }
-h1 { color: #ff1170; font-size: 3.2em; clear: right; text-align: right; margin: 0 0 14px 0; text-shadow: #bb004b 2px 2px 2px; }
-h1 a:hover, h1 a:focus { text-decoration: none; }
-h1 a:link, h1 a:hover, h1 a:focus, h1 a:visited { color: #ff1170; background: #111111; text-decoration: none; }
-h2 { font-size: 1.2em; clear: right; text-align: right; margin: 14px 0; padding-top: 14px; }
+a img.thumb { border: 1px #111111 solid; }
+a:hover img.thumb { border: 1px #ff1170 solid; background: #111111; }
+h2 { font-size: 1.2em; clear: right; margin: 14px 0; padding-top: 14px; }
 .pink-bottom-border { padding-bottom: 6px; border-bottom: 1px dotted #ff1170; }
-p.phototitle { font-size: 2em; margin: 0 0 8px 0; }
-p.description { font-size: 1.1em; }
-div#footer { text-align: right; font-size: 0.9em; border-top: 1px dotted #ff1170; margin-top: 12px; padding: 8px 0 4px 0; }
+.large-serif { font-family: Georgia, serif; font-size: 2.1em; font-style: italic; }
+#the-rest { margin: 24px 0; }
+#photo-title { margin: 24px 0 10px 0; }
