--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,20 +3,14 @@
   %head
     %title="one photo every day"
     %link{:rel => 'shortcut icon', :href => '/favicon.ico'}
-    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css?v=20110806' }
+    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css?v=20110821' }
     -if production?
       = partial :google_analytics
-  %body{ :style => "background: url(\"#{@bg}\") repeat scroll 0 0 transparent" }
+  %body
     .container
-      %a{ :href => '/', :title => 'a thing where james takes one photo every single day' }
-        %h1{ :class => 'pink-bottom-border' }
-          ="one photo every day"
+      %div{ :id => 'about', :class => 'pink-bottom-border' }
+        ="On the 25th of September 2010, <a href=\"http://jdenn.es/\" target=\"_blank\">James</a> decided to start taking "
+        ="<a href=\"/\">one photo every day</a>. So far, he's taken "
+        %a{ :href => "http://www.flickr.com/photos/jdennes/sets/72157625078364543/", :target => "_blank" }=@photo_count
+        ="photos."
       = yield
-      %div{ :id => 'footer' }
-        ="This little thing is constructed by"
-        %a{ :href => "http://jdenn.es/", :target => "_blank" }
-          ="james"
-        ="taking one photo every day. There's a"
-        %a{ :href => "/feed" }
-          ="feed"
-        ="too, if you're into that."
